檔案壓縮長寬完成

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     </section>
     
     <section class="download">
-      <div class="block">
+      <!-- <div class="block">
         <h2>Firebase</h2>  
         <div class="infoZone">
           <ul>
             <li v-for="item in firebase">{{item._location.path_}}</li>
           </ul>
         </div>
-      </div>
+      </div> -->
       <div class="block">
         <h2>Imgur</h2>  
         <div class="infoZone">
